kube/service_app.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: revolute-sre-test-task
spec:
  selector:
    app: app
  ports:
    - name: app
      port: 80
      targetPort: 80
      protocol: TCP
