kube/service_db.yml
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: sre-test-task
spec:
  selector:
    app: db
  ports:
    - name: db
      port: 5432
      targetPort: 5432
      protocol: TCP
